style.css
@import "/reset.css";
@import url('https://fonts.googleapis.com/css?family=Oswald:200,300,400,500,600,700&display=swap');

*{
    box-sizing: border-box;
    -webkit-overflow-scrolling: touch;
}


/* body {
    font-family: 'Oswald', sans-serif;
    letter-spacing: 3px;
} */

body .bg {
    width: 100%;
    height: 100%;
    background: url('https://images.unsplash.com/photo-1542546068979-b6affb46ea8f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1534&q=80') no-repeat center center; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    font-family: 'Oswald', sans-serif;
    letter-spacing: 3px;
    position: fixed;
    /* z-index: -10; */
    /* right: 0;
    left: 0; */
}
/* body:before {
    content: "";
    display: block;
    position: fixed;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    z-index: -10;
    background: url(https://images.unsplash.com/photo-1542546068979-b6affb46ea8f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1534&q=80) no-repeat center center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
  } */
body .bg .overlay {
    background: -webkit-linear-gradient(left, rgba(36,16,81,.7) 0%,rgba(130,75,140,.7) 86%,rgba(130,75,140,.6) 100%);
    /* overflow: hidden; */
    width: 100%;
    height: 10000px;
    /* top: 0; */
}
/* start left */
body .left-nav {
    float: left;
    width: 20%;
    height: 100%;
    position: fixed;
    padding: 0;
    color: white;
}
body .left-nav h1 {
    font-size: 1.8rem;
    padding: 50px 0;
    text-align: center;
    /* font-weight: 700; */
}
body .left-nav .column ul {
    list-style-type: none;
    margin-right: 15%;
    padding: 0;
    text-align: right;
    padding: 210px 0;
}
body .left-nav .column ul li {
    padding: 10px 0;
    /* font-weight: 400; */
}
body .left-nav .column ul li a {
    text-decoration: none;
    color: white;
}
body .left-nav .column ul li a .icon {
    margin-left: 10px;
    font-size: 1rem;
    color: white;
}
body .left-nav .column .footer-icon {
    display: flex;
    justify-content: center;
    padding: 20px 0;
}
body .left-nav .column .footer-icon a {
    color: white;
}
body .left-nav .column .footer-icon a .fab {
    font-size: 1.5rem;
    padding: 0 10px;
}
body .left-nav .column .footer-text {
    padding-bottom: 20px;
}
body .left-nav .column .footer-text h6 {
    font-size: .8rem;
    font-weight: 400;
    text-align: center;
}
body .left-nav .column .footer-text h6 span {
    color: white;
    /* font-weight: 700; */
    font-size: 1rem;
    letter-spacing: 5px;
    line-height: 3;
}
/* end left */

/* start right side */
body .bg .overlay .Rcontainer {                        /* edited */
    height: 100vh;
    overflow-x: hidden;
    overflow-y: scroll;
    /* -webkit-overflow-scrolling: touch !important; */
}
body .overlay .right-label {
    margin-left: 35%;
    width: 45%;
    /* position: absolute; */
    padding-right: 10px;
}

body .right-label .row .label-container h1 {
    text-align: center;
    color: white;
    opacity: .4;
    font-size: 5rem;
    width: 500px;
}
body .overlay .right-label #home {
    padding-top: 400px;
    margin-bottom: 400px;
}
body .overlay .right-label #top-projects {
    padding-top: 400px;
    margin-bottom: 400px;
}
body .overlay .right-label #about-me {
    padding-top: 400px;
    margin-bottom: 400px;
}
body .overlay .right-label #project-archive {
    padding-top: 400px;
    margin-bottom: 400px;
}
body .overlay .right-label #resume {
    padding-top: 400px;
    margin-bottom: 400px;
}
body .overlay .right-label #contact-me {
    padding-top: 400px;
    margin-bottom: 400px;
}
body .overlay .right-label .row .label-container .mid-txt {
    opacity: 1;
}
body .overlay .right-label .rotate {
    transform: rotate(90deg);
    text-align: center;
}
/* end right side */



.gray{
    background: gray;
    border: 1px dashed white;
    opacity: .5;
    
}


@media (max-width: 1200px) {
    body .overlay .right-label .rotate {
        display: none !important;
    }
}
@media (max-width: 1024px) {
    /* body:before {
        content: "";
        display: block;
        position: fixed;
        left: 0;
        top: 0;
        width: 100%;
        height: 100%;
        z-index: -10;
        background: url(https://images.unsplash.com/photo-1542546068979-b6affb46ea8f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1534&q=80) no-repeat center center;
        -webkit-background-size: cover;
        -moz-background-size: cover;
        -o-background-size: cover;
        background-size: cover;
      } */
    body .overlay .left-nav {
        display: none !important;
    }
    body .overlay .column {
        margin-left: 0;
        margin: 0 auto;
        width: 100%;
    }
    body .overlay .right-label .row .label-container {
        flex: 0 0 100%;
        max-width: 100%;
    }
    body .overlay .right-label .row .label-container h1 {
        width: 100%;
    }
    body .overlay .right-label #home {
        padding-top: 100px;
        margin-bottom: 500px;
    }
}
/* @media (max-width: 992px) {
    body .overlay .left-nav .column .logo {
        max-width: 30%;
    }
    body .overlay .left-nav .column .sections {
        max-width: 30%;
    }
    body .overlay .left-nav .column .footer-icon {
        max-width: 30%;
    }
    body .overlay .left-nav .column .footer-text {
        max-width: 30%;
    }
} */
@media (max-width: 787px) {
    
    
}

